unpackaged/main/default/objects/Sponsorship__c/Sponsorship__c.object-meta.xml
<CustomObject>
    <description>Used for Pfizer in GES Connect</description>
    <label>Sponsorship</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Sponsorship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>