unpackaged/main/default/objects/Sponsorship__c/fields/Agency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact_Phone__c</fullName>
    <label>Agency Contact Phone</label>
    <type>Phone</type>
</CustomField>