unpackaged/main/default/objects/Sponsorship__c/fields/Alternate_Activity__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Activity__c</fullName>
    <label>Alternate Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertising Tactics</fullName>
            </value>
            <value>
                <fullName>Profile/Landing Page</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
                <default>true</default>
                <label>Sponsorship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>