unpackaged/main/default/objects/Sponsorship__c/fields/CanceledDate__c.field-meta.xml
<CustomField>
    <fullName>CanceledDate__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>