unpackaged/main/default/objects/Sponsorship__c/fields/Exhibit_Bundled_with_Sponsorsip__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Bundled_with_Sponsorsip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit Bundled With Sponsorship</label>
    <type>Checkbox</type>
</CustomField>