unpackaged/main/default/objects/Sponsorship__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amy Gerrard</fullName>
            </value>
            <value>
                <fullName>Ashley Simmons</fullName>
            </value>
            <value>
                <fullName>Emily Huntzinger</fullName>
            </value>
            <value>
                <fullName>Emily Piery</fullName>
            </value>
            <value>
                <fullName>Emily Rawls</fullName>
            </value>
            <value>
                <fullName>Georgia Moore</fullName>
            </value>
            <value>
                <fullName>Jennifer Cherok</fullName>
            </value>
            <value>
                <fullName>Jessica Bodner</fullName>
            </value>
            <value>
                <fullName>Jill Johnson</fullName>
            </value>
            <value>
                <fullName>Julie Powell</fullName>
            </value>
            <value>
                <fullName>Kaylene Pastorius</fullName>
            </value>
            <value>
                <fullName>Laurie Miller</fullName>
            </value>
            <value>
                <fullName>Linda Holland</fullName>
            </value>
            <value>
                <fullName>Megan Siconolfi</fullName>
            </value>
            <value>
                <fullName>Nicole Dribnock</fullName>
            </value>
            <value>
                <fullName>Sarah Rado</fullName>
            </value>
            <value>
                <fullName>Shilpa Mistry</fullName>
            </value>
            <value>
                <fullName>Stephanie Houck</fullName>
            </value>
            <value>
                <fullName>Stephanie Solomon</fullName>
            </value>
            <value>
                <fullName>Tara Nigro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>