unpackaged/main/default/objects/Sponsorship__c/fields/Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GES Connect Corporate Accounts</label>
    <referenceTo>GES_Connect_Corporate_Accounts__c</referenceTo>
    <relationshipLabel>Sponsorship</relationshipLabel>
    <relationshipName>Sponsorship_Instance</relationshipName>
    <type>Lookup</type>
</CustomField>