unpackaged/main/default/objects/Sponsorship__c/fields/Sponsorship_Costs_Actual__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Costs_Actual__c</fullName>
    <label>Sponsorship Costs Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>