unpackaged/main/default/objects/Sponsorship__c/fields/Sponsorship_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Name__c</fullName>
    <label>Sponsorship Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>