unpackaged/main/default/objects/Sponsorship__c/fields/Sponsorship_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Registrants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sponsorship Registrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>